--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </ul>
             </div>
             <div class="hidden lg:block"><button
-                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-102 transition-transform duration-300 flex gap-2">Subscribe <span class="mt-1"><img src="./assets/ArrowRight.png" alt=""></span></button> 
+                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-102 transition-transform duration-300 flex gap-2">Subscribe
+                    <span class="mt-1"><img src="./assets/ArrowRight.png" alt=""></span></button>
             </div>
         </nav>
         <!-- this is banner section -->
@@ -33,41 +34,47 @@
             <div class="flex justify-center ">
 
                 <div class="flex justify-center items-start">
-                    <h3 class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52">NEW
+                    <h3
+                        class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52">
+                        NEW
                     </h3>
-                    <img class="w-52 lg:w-[340px] h-52 lg:h-[340px] mt-16 lg:mt-24" src="./assets/hero-circle.png" alt="">
+                    <img class="w-52 lg:w-[340px] h-52 lg:h-[340px] mt-16 lg:mt-24" src="./assets/hero-circle.png"
+                        alt="">
 
                 </div>
-                <img class="h-20 lg:h-48 lg:w-48 absolute mt-32 lg:mt-40 px-10 lg:pt-2 lg:pb-3" src="./assets/microphone.png" alt="">
+                <img class="h-20 lg:h-48 lg:w-48 absolute mt-32 lg:mt-40 px-10 lg:pt-2 lg:pb-3"
+                    src="./assets/microphone.png" alt="">
 
             </div>
             <div class="mt-10 text-center">
                 <h1 class="font-extrabold text-[40px] lg:text-6xl text-gray-50 p-2">TechWave</h1>
-                <p class="lg:pt-2 px-3 lg:px-0 pb-3.5 lg:pb-6 text-gray-400">Your daily dose of tech insights, productivity hacks, and personal
+                <p class="lg:pt-2 px-3 lg:px-0 pb-3.5 lg:pb-6 text-gray-400">Your daily dose of tech insights,
+                    productivity hacks, and personal
                     growth</p>
                 <div class="flex text-center justify-center gap-2">
                     <button
                         class="flex gap-2 px-5 py-3 rounded-4xl bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] font-semibold text-base text-gray-50 hover:scale-102 transition-transform duration-300">
                         <span><img class="mt-1" src="./assets/spotify.png" alt=""></span>Listen On Spotify</button>
                     <button
-                        class="flex gap-2 px-5 py-3 rounded-4xl font-semibold text-base text-green-400 border border-emerald-300 hover:scale-102 transition-transform duration-300"><span><img class="mt-1"
-                                src="./assets/message.png" alt=""></span>Subscribe</button>
+                        class="flex gap-2 px-5 py-3 rounded-4xl font-semibold text-base text-green-400 border border-emerald-300 hover:scale-102 transition-transform duration-300"><span><img
+                                class="mt-1" src="./assets/message.png" alt=""></span>Subscribe</button>
                 </div>
             </div>
         </div>
     </header>
     <!-- this is main section -->
-    <main class="py-20 bg-[rgba(26,11,46,1)]">
+    <main class="py-20 bg-[#230f3c]">
         <!-- about section -->
-        <section class="lg:h-[500px] w-full text-center px-5 lg:px-40 py-6  lg:py-0">
-            <h1 class=" font-bold lg:font-semibold text-3xl lg:text-5xl text-gray-50 pb-2">About the Podcast</h1>
+        <section class="lg:h-[500px] w-full text-center px-5 lg:px-40 py-6  lg:py-0 ">
+            <h1 class=" font-bold lg:font-semibold text-3xl lg:text-5xl text-gray-50 pb-2 lg:pb-8">About the Podcast</h1>
             <p class="font-normal text-base text-gray-400 pb-3">TechWave is your go-to podcast for staying ahead in the
                 fast-paced world of technology. We break down
                 complex topics into digestible insights, explore productivity strategies that actually work, and share
                 stories of personal growth from industry leaders.</p>
-            <p class="font-normal text-base text-gray-400 pb-12 lg:pb-36">Join thousands of young professionals and tech
+            <p class="font-normal text-base text-gray-400 pb-12 lg:pb-20">Join thousands of young professionals and tech
                 enthusiasts who start their day with TechWave. </p>
-            <div class="font-black text-4xl lg:text-5xl grid grid-cols-2 gap-4 lg:gap-0lg:flex justify-between text-[#4af8a7]">
+            <div
+                class="font-black text-4xl lg:text-5xl grid grid-cols-2 gap-4 lg:gap-0lg:flex justify-between text-[#4af8a7]">
                 <div>150K+ <br><span class="font-normal text-base text-gray-400">Monthly Listeners</span></div>
                 <div>200+ <br><span class="font-normal text-base text-gray-400">Episodes Published </span></div>
                 <div>4.9* <br><span class="font-normal text-base text-gray-400">Average Rating</span></div>
@@ -77,11 +84,13 @@
 
         </section>
         <!--this is Choose Section -->
-        <section class="bg-[#250a45] px-40 pb-24">
-            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10 pt-20">Why Choose TechWave</h1>
-            <div class="grid grid-cols-3 grid-rows-3 gap-7">
-                <div class=" items-center  col-span-1 row-span-2 rounded-4xl bg-[#482a6d] p-3">
-                    <img class="mt-16" src="./assets/headphone.png" alt="">
+        <section class="bg-[#250a45] px-5 lg:px-40 py-9 lg:py-0 lg:pb-24">
+            <h1 class="font-bold text-3xl lg:text-5xl text-gray-50 text-center pb-8 lg:pb-10 pt-1 lg:pt-20">Why Choose
+                TechWave</h1>
+            <div class="grid  lg:grid-cols-3 lg:grid-rows-3 gap-7">
+                <div
+                    class=" items-center col-span-2 lg:col-span-1 row-span-1 lg:row-span-2 rounded-4xl bg-[#482a6d] p-3">
+                    <img class="lg:mt-16" src="./assets/headphone.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 y-4">Premium Audio Quality</h3>
                     <p class="font-normal text-base text-gray-400">Experience crystal-clear sound with
                         professional-grade recording equipment and expert audio engineering. Every episode is mastered
@@ -106,7 +115,8 @@
                         founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere
                         else, diving deep into their journeys, failures, and success strategies.</p>
                 </div>
-                <div class=" items-center rounded-4xl bg-[#482a6d] p-3">
+                <div
+                    class=" items-center rounded-4xl bg-[#482a6d] p-3 col-span-2 lg:col-span-1 row-span-1 lg:row-span-1">
                     <img src="./assets/resource.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Rich Resources</h3>
                     <p class="font-normal text-base text-gray-400">Access show notes, transcripts, and additional
@@ -117,10 +127,10 @@
         </section>
 
         <!--this is Featured Episodes section -->
-        <section class="py-24 px-40">
-            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10">Featured Episodes</h1>
-            <div class="grid grid-cols-3 gap-1.5">
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+        <section class="py-9 lg:py-24 px-5 lg:px-40">
+            <h1 class="font-bold text-4xl lg:text-5xl text-gray-50 text-center pb-6 lg:pb-10">Featured Episodes</h1>
+            <div class="grid lg:grid-cols-3 gap-4 lg:gap-1.5">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/oX7OduG1YmI?si=K5S118GTPnRBAsTa" title="YouTube video player"
                         frameborder="0"
@@ -128,15 +138,16 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <div class="p-5">
-                        <h3 class="font-bold text-2xl text-gray-100 py-4">The Future Mark Zuckerberg Is Trying To Build
+                        <h3 class="font-semibold lg:font-bold text-2xl text-gray-100 py-4">The Future Mark Zuckerberg Is
+                            Trying To Build
                         </h3>
                         <p class="font-normal text-base text-gray-400 pb-2.5"> To paint a picture of the future Mark
                             Zuckerberg is trying to build, so that you can decide for yourself what you think of it.</p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
-                                    alt=""></span>47</div>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5"
+                                    src="./assets/clock.png" alt=""></span>47</div>
                     </div>
                 </div>
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/7eAh7uEFhdg?si=NhXkqZtijjwlv6NL" title="YouTube video player"
                         frameborder="0"
@@ -144,15 +155,15 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <div class="p-5">
-                        <h3 class="font-bold text-2xl text-gray-100 py-4">How to Build Great Teams</h3>
+                        <h3 class="font-semibold lg:font-bold text-2xl text-gray-100 py-4">How to Build Great Teams</h3>
                         <p class="font-normal text-base text-gray-400 pb-2.5">Jocko Willink is a retired Navy SEAL
                             officer and author of multiple books on effective leadership and teamwork, self-discipline
                             and mindset, and host of the Jocko Podcast.</p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
-                                    alt=""></span>7</div>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5"
+                                    src="./assets/clock.png" alt=""></span>7</div>
                     </div>
                 </div>
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/QQ4UyZNXof8?si=1RMRTW1eig1UOv2S" title="YouTube video player"
                         frameborder="0"
@@ -160,13 +171,14 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <div class="p-5">
-                        <h3 class="font-bold text-2xl text-gray-100 py-4">How AI is Changing DevOps Careers</h3>
+                        <h3 class="font-semibold lg:font-bold text-2xl text-gray-100 py-4">How AI is Changing DevOps
+                            Careers</h3>
                         <p class="font-normal text-base text-gray-400 pb-2.5"> In this video I sat down with Bret Fisher
                             - Docker Captain and DevOps educator who spent 2 years walking around conferences asking
                             engineers one question: Are you actually using AI in DevOps?
                         </p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
-                                    alt=""></span>57</div>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5"
+                                    src="./assets/clock.png" alt=""></span>57</div>
                     </div>
                 </div>
 
@@ -176,59 +188,59 @@
         </section>
 
         <!--this is Meet the Host section -->
-        <section class="px-40">
+        <section class="px-5 lg:px-40">
 
-            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10">Meet The Host</h1>
-            <div class="flex gap-6 p-10 rounded-4xl bg-[#250b47]">
-                <div class="h-48 w-56"><img class="h-full max-w-fit" src="./assets/host.png" alt=""></div>
+            <h1 class="font-bold text-4xl lg:text-5xl text-gray-50 text-center pb-7 lg:pb-10">Meet The Host</h1>
+
+            <div class="lg:flex gap-6 p-10 rounded-4xl bg-[#250b47]
+            flex flex-col items-center text-center
+            lg:flex-row lg:items-start lg:text-left">
+
+                <div class="h-48 w-56">
+                    <img class="h-full max-w-fit" src="./assets/host.png" alt="">
+                </div>
+
                 <div>
                     <h1 class="font-bold text-3xl text-gray-100">Alex Kumar</h1>
-                    <p class="font-normal text-base text-gray-400 p-2.5 pl-0"> Tech entrepreneur, productivity expert,
+
+                    <p class="font-normal text-base text-gray-400 p-2.5 pl-0">
+                        Tech entrepreneur, productivity expert,
                         and lifelong learner. Alex has been in the tech industry for over 10 years, working with
                         startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders
-                        and practical advice for anyone looking to grow in tech.</p>
-                    <div>
-                        <ul class="flex gap-3">
-                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
-                                    src="./assets/linkedin.png" alt=""></li>
-                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
-                                    src="./assets/x.png" alt=""></li>
-                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
-                                    src="./assets/instagram.png" alt=""></li>
-                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
-                                    src="./assets/youtube.png" alt=""></li>
+                        and practical advice for anyone looking to grow in tech.
+                    </p>
 
+                    <div>
+                        <ul class="flex gap-3 justify-center lg:justify-start">
+                            <li class="border border-gray-200 rounded-4xl p-3">
+                                <img class="h-5 w-5" src="./assets/linkedin.png" alt="">
+                            </li>
+                            <li class="border border-gray-200 rounded-4xl p-3">
+                                <img class="h-5 w-5" src="./assets/x.png" alt="">
+                            </li>
+                            <li class="border border-gray-200 rounded-4xl p-3">
+                                <img class="h-5 w-5" src="./assets/instagram.png" alt="">
+                            </li>
+                            <li class="border border-gray-200 rounded-4xl p-3">
+                                <img class="h-5 w-5" src="./assets/youtube.png" alt="">
+                            </li>
                         </ul>
                     </div>
                 </div>
+
             </div>
 
         </section>
     </main>
-    <!-- 
-    <footer class=" bg-[url('./assets/footer-bg.png')] bg-center bg-cover h-[400px]">
-        <div class="relative justify-center">
-            <h1><img class="absolute items-center text-center justify-center " src="./assets/TechWave.png" alt=""></h1>
-            <div class="flex gap-2">
-                <ul class="">
-                    <li class="flex gap-2"><a href=""><img src="./assets/spotify.png" alt=""><span class="">Spotify</span></a></li>
-                    <li><a href=""><img src="./assets/apple-podcast.png" alt="">Apple Podcast</a></li>
-                    <li><a href=""><img src="./assets/youtube.png" alt="">YouTube</a></li>
-                    <li><a href=""><img src="./assets/twitter.png" alt="">Twitter</a></li>
-                </ul>
-            </div>
-
-        </div>
 
 
-    </footer> -->
+    <footer class="bg-[url('./assets/footer-bg.png')] bg-center bg-cover bg-no-repeat lg:h-[400px]">
+        <div class="h-full flex flex-col items-center justify-center gap-6 lg:gap-8 text-gray-300">
 
-    <footer class="bg-[url('./assets/footer-bg.png')] bg-center bg-cover h-[400px]">
-        <div class="h-full flex flex-col items-center justify-center gap-8 text-gray-300">
+            <img class="mt-4 lg:mt-0 w-52 lg:w-96 h-8 lg:h-14" src="./assets/TechWave.png" alt="TechWave">
 
-            <img class="w-96 h-14" src="./assets/TechWave.png" alt="TechWave">
-
-            <ul class="flex gap-10 ">
+            <ul class="grid grid-cols-2 
+           lg:flex lg:gap-10 ">
 
                 <li>
                     <a href="#" class="flex items-center gap-2 hover:scale-110 transition">
@@ -255,7 +267,7 @@
                 </li>
 
             </ul>
-            <p class="text-gray-400"> © 2026 TechWave Podcast. All rights reserved.</p>
+            <p class="text-gray-400 mb-4 lg:mb-0"> © 2026 TechWave Podcast. All rights reserved.</p>
 
         </div>
     </footer>
